[gd_scene load_steps=2 format=3 uid="uid://b1jaqkwuy32ds"]

[ext_resource type="Script" uid="uid://dfswvmscs8ekj" path="res://DigitSpinner.gd" id="1_nc08d"]

[node name="DigitSpinner" type="Control"]
custom_minimum_size = Vector2(50, 120)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nc08d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "▲"

[node name="DigitLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "▼"
